--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/lexend_exa</item>
         <item>@font/lexend_tera</item>
         <item>@font/roboto</item>
         <item>@font/roboto_regular</item>
